[project]
name = "fastapitutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.0",
    "fastapi>=0.124.4",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "imagekitio>=5.0.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
    "uvicorn[standard]>=0.38.0",
]
